[package]
name = "cvealerts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.114"
spider = "1.83.6"
error-chain = "0.12.4"
scraper = "0.18.1"
